--- a/ASSETS/css/white mode.css
+++ b/ASSETS/css/white mode.css
@@ -1,14 +1,14 @@
 *{
     margin: 0px;
     padding: 0px;
-    background-color: rgb(0, 0, 0);
+    background: #F3FFFF;
 }
 
 header {
     margin-top: 30px;
 }
 .container{
-    background-color: black;
+    background: #F3FFFF;
     box-shadow: 0px 1px 2px rgba(73, 72, 72, 0.2);
     width: 90%;
     margin: auto;
@@ -18,17 +18,16 @@ header {
     
     text-align: center;
     justify-content: space-between;
-    
 }
 .logo{
-    color: #FAF9F6;
+    color: #0F0028;
     font-size: 32px;
     font-weight: 700;
     letter-spacing: -0.817px;
     font-family: 'Galano Grotesque Alt', sans-serif;
     text-decoration: none;
     & span{
-        color: darkred;
+        color: aqua;
     }
 }
 .container .row .nav-links {
@@ -44,11 +43,11 @@ header {
                 transition: all 0.5s;
                 & a {
                     text-decoration: none;
-                    color: white;
+                    color:  #0F0028;
                     font-size: 20px;
                     font-weight: 700;
                     &:hover {
-                        color: brown;
+                        color: aqua;
                        
                     }
                 }
@@ -56,6 +55,9 @@ header {
             }
 
     }
+  }
+  .bars{
+    display: none;
   }
  .sign-login{
     width: 11%;
@@ -77,9 +79,9 @@ header {
 }
 .sign{
     & a {
-        color: aliceblue;
+        color: #0F0028;
         &:hover {
-            color:darkred;
+            color:aqua;
         }
     }
 }
@@ -87,10 +89,10 @@ header {
    
     & a {
         text-decoration: none;
-        color: white;
+        color:  #0F0028;
         font-weight: 700;
-        background-color:darkred ;
-        border: 1px solid  darkred;
+        background-color:aqua ;
+        border: 1px solid  aqua;
         border-radius:40px ;
         
         padding: 10px 15px;
@@ -110,7 +112,7 @@ header {
 }
 .textAndbtn{
     width: 25%;
-    color: white;
+    color: #0F0028;
     font-family: "Galano Grotesque Alt", sans-serif
     
     
@@ -121,7 +123,7 @@ header {
     font-weight: 700;
     margin-bottom: 20px;
     & span {
-        color: darkred;
+        color: aqua;
     }
 }
 .textAndbtn h2{
@@ -142,15 +144,15 @@ header {
    
     & button {
         width: 100%;
-        background-color: darkred;
-        color: white;
+        background-color: aqua;
+        color: black;
         font-size: 18px;
         font-weight: 600;
         padding: 20px;
         border-radius: 50px;
         cursor: pointer;
         margin-bottom: 20px;
-        border-color: darkred;
+        border-color: aqua;
         & i {
             font-size: 18px;
         }
@@ -158,23 +160,26 @@ header {
     }
 }
 .blackMode{
-    border: 1px solid black;
+    border: 1px solid white;
     border-radius: 50%;
     position: fixed;
     bottom: 50px;
     right: 50px;
     transition: 0.5s;
-    background-color: rgba(40, 39, 39, 0.407);
+    background-color: white;
     padding: 25px 28px 25px 30px;
+    box-shadow: 7px 7px 15px -10px #bbcfda, -4px -4px 13px #ffffff, inset 7px 7px 3px rgba(209, 217, 230, 0.35), inset -11px -11px 3px rgba(255, 255, 255, 0.3);
+
     &:hover {
-        background-color: rgba(40, 39, 39, 0.751);
+        background-color: rgba(255, 255, 255, 0.753);
+
+        
     }
     & i {
         font-size: 40px;    
-        color: aliceblue;
-        background-color: rgba(40, 39, 39, 0.407);
+        background-color: white;
         &:hover {
-            background-color: rgba(40, 39, 39, 0.751);
+            background-color: rgba(255, 255, 255, 0.753);
             cursor: pointer;
         }
         
